[package]
name = "checkin-embedded"
version = "0.1.0"
authors = ["Ryan Petschek <petschekr@gmail.com>"]
edition = "2018"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
pcsc = "2"
url = "1.7.2"
reqwest = "0.9.9"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.37"
rocket = "0.4.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json", "serve", "handlebars_templates"]
