[package]
name = "checkin-embedded"
version = "0.1.0"
authors = ["Ryan Petschek <petschekr@gmail.com>"]
edition = "2018"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
# Client
pcsc = "2"
url = "1.7.2"
reqwest = "0.9.9"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.38"
rand = "0.6.5"
hex = "0.3.2"
crypto-hash = "0.3.3"
# Server
mongodb = "0.3.12"
rocket = "0.4.0"

[dependencies.ed25519-dalek]
version = "1.0.0-pre.1"
features = ["serde"]

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json", "serve", "handlebars_templates"]
