[package]
name = "checkin-embedded-client"
version = "0.1.0"
authors = ["Ryan Petschek <petschekr@gmail.com>"]
edition = "2018"

[dependencies]
pcsc = "2"
url = "1.7.2"
reqwest = "0.9.10"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
rand = "0.6.5"
hex = "0.3.2"
crypto-hash = "0.3.3"
rppal = "0.10.0"
hackgt-nfc = "0.3.0"
chrono = "0.4"

openssl-sys = "*"

[dependencies.ed25519-dalek]
version = "1.0.0-pre.1"
features = ["serde"]

[features]
# Builds OpenSSL independently so that the build succeeds even if OpenSSL library isn't installed for target
vendored = ["openssl-sys/vendored"]
