[package]
name = "checkin-embedded-server"
version = "0.1.0"
authors = ["Ryan Petschek <petschekr@gmail.com>"]
edition = "2018"


[dependencies]
hex = "0.3.2"
url = "1.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.38"
mongodb = "0.3.12"
wither = "0.8.0"
wither_derive = "0.8.0"
rocket = "0.4.0"
hackgt-nfc = "0.1.1"

[dependencies.ed25519-dalek]
version = "1.0.0-pre.1"
features = ["serde"]

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json", "serve", "handlebars_templates"]
